--- a/client/index.html
+++ b/client/index.html
@@ -1,31 +1,22 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <script>var analytics = analytics || { identify: function(){}, track: function(){}, page: function(){} };</script>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no">
     <link rel="shortcut icon" href="/favicon.ico">
-    <!-- Stylesheets belong here -->
-    <!--
-      Notice the use of %PUBLIC_URL% in the tag above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
   </head>
   <body>
+    <div style="position: absolute;opacity: 0;visibility: hidden; display: none;">
+      <svg>
+        <defs>
+          <linearGradient x1="0%" y1="100%" x2="100%" y2="0%" id="master-linearGradient">
+            <stop stop-color="#5395F6" offset="0%"></stop>
+            <stop stop-color="#63C8E4" offset="100%"></stop>
+          </linearGradient>
+        </defs>
+      </svg>
+    </div>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
