--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,20 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <script>var analytics = analytics || { identify: function(){}, track: function(){}, page: function(){} };</script>
+    <!-- <script>var analytics = analytics || { identify: function(){}, track: function(){}, page: function(){} };</script> -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no">
     <link rel="shortcut icon" href="/favicon.ico">
+
+    <script src="https://use.typekit.net/cwf2dcw.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
+
+    <script>
+    !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t){var e=document.createElement("script");e.type="text/javascript";e.async=!0;e.src=("https:"===document.location.protocol?"https://":"http://")+"cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(e,n)};analytics.SNIPPET_VERSION="4.0.0";
+    analytics.load("vYlYYxGzoYmD7tUISlFocoAArglsmP6x");
+    analytics.page();
+    }}();
+    </script>
   </head>
   <body>
     <div style="position: absolute;opacity: 0;visibility: hidden; display: none;">
