make a huge step forward to the end
too many things to document them all here, but here are some changes:

- move the tabs.js file to utils for better access
- add new validators
- add texts for the steps by service
- add last page
- change order of pages
- made chris come up only on phone
- change style of choice component

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
   <head>
     <!-- <script>var analytics = analytics || { identify: function(){}, track: function(){}, page: function(){} };</script> -->
     <meta charset="utf-8">
@@ -17,16 +17,7 @@
     </script>
   </head>
   <body>
-    <div style="position: absolute;opacity: 0;visibility: hidden; display: none;">
-      <svg>
-        <defs>
-          <linearGradient x1="0%" y1="100%" x2="100%" y2="0%" id="master-linearGradient">
-            <stop stop-color="#5395F6" offset="0%"></stop>
-            <stop stop-color="#63C8E4" offset="100%"></stop>
-          </linearGradient>
-        </defs>
-      </svg>
-    </div>
+    <iframe name="hidden-iframe" style="display:none;visibility:hidden;position:absolute;"></iframe>
     <div id="root"></div>
   </body>
 </html>
